# teeldear

./: .prettierrc  README.md  bun.lockb  index.css  index.html  package.json
src/: App.css  App.tsx  NotificationBox.tsx  OptionButton.tsx  OptionButtons.tsx  OptionsAndOverviews.tsx  OverviewBox.tsx  OverviewBoxes.tsx  OverviewTable.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/queries/github/: repo.graphql
src-tauri/src/: main.rs
src-tauri/src/github/: api.rs  mod.rs  types.rs
src/pages/: OverviewPage.tsx
src/pages/Options/: OptionButton.tsx  OptionButtons.tsx
src/pages/Overviews/: LoadingTableBody.tsx  NotificationBox.tsx  OverviewBoxes.tsx  PullRequestTableBody.tsx  PullRequestsTable.tsx  PullRequestsTable.utils.ts  SlackNotifications.tsx  TicketsTable.tsx
src/queries/: types.ts  useGetPrs.ts  utils.ts
