[package]
name = "teeldear"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
lazy_static = "1.4.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
